Fix logo: Switch from handshake-logo.jpg to logo.svg
- Use the proper high-quality SVG logo instead of low-res JPG
- The SVG logo shows human-AI handshake theme perfect for the setup page

--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
     <div class="container">
         <div class="header">
             <div class="logo-title">
-                <img src="./handshake-logo.jpg" alt="Organized AI Logo" class="logo">
+                <img src="./logo.svg" alt="Organized AI Logo" class="logo">
                 <h1 class="title">Organized AI Dev Setup</h1>
             </div>
             <p class="subtitle">Get your AI development environment ready in 5 minutes!</p>
